<resources>
    <string name="app_name">RecipePITB</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="recipes">Recipes</string>
    <string name="disover">Disover</string>
    <string name="potstickers_chinese_dumplings">Potstickers\n(Chinese\nDumplings)</string>
    <string name="an_authentic_potsticker_nrecipe_using_ground_nbeef_and_ground_shrimp">An authentic potsticker\nrecipe using ground\nbeef and ground shrimp</string>
    <string name="_25_min">25Min</string>
    <string name="easy">Easy</string>
    <string name="categories">Categories</string>
    <string name="pizza">Pizza</string>
    <string name="steak">Steak</string>
    <string name="pasta">Pasta</string>
    <string name="popular_recipes">Popular Recipes</string>
    <string name="marsala_marinated_skirt_steak">Marsala Marinated Skirt Steak</string>
    <string name="recipes_detail">Recipes Detail</string>
    <string name="setting">Setting</string>
    <string name="an_authentic_potsticker_rrecipe_using_ground_beef_and_ground_shrimp_an_authentic_potsticker_rrecipe_using_ground_beef_and_ground_shrimp_an_authentic_potsticker_rrecipe_using_ground_beef_and_ground_shrimp">An authentic Potsticker Rrecipe using ground beef and ground shrimp. An authentic Potsticker Rrecipe using ground beef and ground shrimp.An authentic Potsticker Rrecipe using ground beef and ground shrimp</string>
    <string name="shrimp">Shrimp</string>
    <string name="_1_pound">1 pound</string>
    <string name="_4_pound">4 pound</string>
    <string name="beef">Beef</string>
    <string name="ginger">Ginger</string>
    <string name="_1_root">1 root</string>
    <string name="soy_sauce">Soy sauce</string>
    <string name="_2_tablespoons">2 tablespoons</string>
    <string name="by_pitb">By PITB</string>
</resources>