<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/background"
    android:layout_height="wrap_content"
    android:layout_marginBottom="30dp"
    tools:context=".ui.gallery.GalleryFragment">

    <RelativeLayout
        android:id="@+id/recipe_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle__17_">

    </RelativeLayout>

    <TextView
        android:id="@+id/title_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/recipe_img"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/marsala_marinated_skirt_steak"
        android:textColor="@color/fontcolor"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/recipedetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_txt"
        android:layout_marginStart="10dp"
        android:paddingEnd="5dp"
        android:layout_marginTop="12dp"
        android:lineHeight="20sp"
        android:text="@string/an_authentic_potsticker_rrecipe_using_ground_beef_and_ground_shrimp_an_authentic_potsticker_rrecipe_using_ground_beef_and_ground_shrimp_an_authentic_potsticker_rrecipe_using_ground_beef_and_ground_shrimp"
        android:textColor="@color/fontcolor"
        android:textSize="14sp"
        android:textStyle="normal"
        tools:targetApi="p" />

    <LinearLayout
        android:id="@+id/eta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/recipedetail"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/clock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/clock" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:text="@string/_25_min"
            android:textColor="@color/fontcolor"
            android:textSize="14sp"
            android:textStyle="normal"
            tools:targetApi="p" />

        <ImageView
            android:id="@+id/shape"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@drawable/chef" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:text="@string/easy"
            android:textColor="@color/fontcolor"
            android:textSize="14sp"
            android:textStyle="normal"
            tools:targetApi="p" />

    </LinearLayout>

    <TextView
        android:id="@+id/categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eta"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/categories"
        android:textColor="@color/fontcolor"
        android:textSize="26sp"
        android:textStyle="bold" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/categories_slider"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/categories"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:orientation="vertical"
                android:background="@drawable/shrimp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shrimp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:layout_marginTop="70dp"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1_pound"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="normal" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:orientation="vertical"
                android:background="@drawable/beef">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/beef"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:layout_marginTop="70dp"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_4_pound"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="normal" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:orientation="vertical"
                android:background="@drawable/ginger">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ginger"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:layout_marginTop="70dp"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1_root"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="normal" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:orientation="vertical"
                android:background="@drawable/soup">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/soy_sauce"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:layout_marginTop="70dp"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_2_tablespoons"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="normal" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:orientation="vertical"
                android:background="@drawable/shrimp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shrimp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:layout_marginTop="70dp"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1_pound"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="normal" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:orientation="vertical"
                android:background="@drawable/beef">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/beef"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:layout_marginTop="70dp"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_4_pound"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="normal" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:orientation="vertical"
                android:background="@drawable/ginger">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ginger"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:layout_marginTop="70dp"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1_root"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="normal" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:orientation="vertical"
                android:background="@drawable/soup">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/soy_sauce"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:layout_marginTop="70dp"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_2_tablespoons"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="normal" />
            </LinearLayout>

        </LinearLayout>
    </HorizontalScrollView>
    <TextView
        android:id="@+id/recipe_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/categories_slider"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/marsala_marinated_skirt_steak"
        android:textColor="@color/fontcolor"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/recipe_detailtxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/recipe_txt"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:lineHeight="20sp"
        android:paddingEnd="5dp"
        android:layout_marginBottom="30dp"
        android:text="@string/an_authentic_potsticker_rrecipe_using_ground_beef_and_ground_shrimp_an_authentic_potsticker_rrecipe_using_ground_beef_and_ground_shrimp_an_authentic_potsticker_rrecipe_using_ground_beef_and_ground_shrimp"
        android:textColor="@color/fontcolor"
        android:textSize="14sp"
        android:textStyle="normal"
        tools:targetApi="p" />


</RelativeLayout>
</ScrollView>