<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.slideshow.SlideshowFragment">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/categories_slider"
        android:layout_marginTop="100dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:orientation="vertical"
                android:background="@drawable/shrimp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shrimp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:layout_marginTop="70dp"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1_pound"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="normal" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:orientation="vertical"
                android:background="@drawable/beef">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/beef"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:layout_marginTop="70dp"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_4_pound"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="normal" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:orientation="vertical"
                android:background="@drawable/ginger">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ginger"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:layout_marginTop="70dp"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1_root"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="normal" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:orientation="vertical"
                android:background="@drawable/soup">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/soy_sauce"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:layout_marginTop="70dp"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_2_tablespoons"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="normal" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:orientation="vertical"
                android:background="@drawable/shrimp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shrimp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:layout_marginTop="70dp"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1_pound"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="normal" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:orientation="vertical"
                android:background="@drawable/beef">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/beef"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:layout_marginTop="70dp"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_4_pound"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="normal" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:orientation="vertical"
                android:background="@drawable/ginger">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ginger"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:layout_marginTop="70dp"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1_root"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="normal" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:orientation="vertical"
                android:background="@drawable/soup">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/soy_sauce"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:layout_marginTop="70dp"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_2_tablespoons"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="normal" />
            </LinearLayout>

        </LinearLayout>
    </HorizontalScrollView>

</RelativeLayout>